--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
-        <li>Integração Contínua</li>
+        <li>Mudei o Nome</li>
     </ul>
 </body>
 
